--- a/AsianPaint/configs/configurations.properties
+++ b/AsianPaint/configs/configurations.properties
@@ -2,3 +2,10 @@ driverPath=E:\\softwere\\chromedriver.exe
 implicitlyWait=15
 url=https://www.asianpaints.com
 mobileNumber=9063771132
+sheatName1=PersonalInformation
+sheatName2=InvalidMobileNumber
+rownum=2
+colume1=FirstName
+colume2=LastName
+colume3=MobileNumber
+excelPath=./src\\test\\java\\com\\excel\\testdata.xlsx
